Sat Nov 25 01:37:18 2006  Tim Janik  <timj@gtk.org>

	* tests/audio/Makefile.am: 
	* tests/audio/adsrtest.bse: added a simple adsr test that checks ADSR
	volume in comparison to a reference signal. used avg-spectrum, spectrum
	and avg-energy to check the colume level, which seems to be catching
	all relevant changes to ADSR property changes.

Thu Nov 23 12:55:14 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsewavetool.cc: Improved some help strings.

Mon Nov 20 23:39:58 2006  Tim Janik  <timj@gtk.org>

	* bstusermessage.h, bstusermessage.c: ported to new SFI Msg API.
	made dialog messaging self-hosted to avoid unnecessary messaging 
	API indirections.

	* bstcxxutils.h, bstcxxutils.cc: new files, providing utilities 
	implemented in C++. provide message handler installation API.

	* bstmain.c: use bst_message_handler_install() and
	bst_message_handler_uninstall().

	* bstapp.c: adaptions to new Msg API.

	* bstbseutils.h: fixed include order for C++.

	* bstxxutils.hh, bstxxutils.cc: removed unused files.

	* tools/bsewavetool.cc: port to C++ Msg API.

	* shell/bsescminterp.c: ported to new sfi_msg* API. send messages
	directly instead of introducing an unnecessary Msg layer indireciton.

Wed Nov 15 16:03:00 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: changed accel to use Ctrl+S for saving
	and Ctrl+D to stop playing songs.

Wed Nov 15 00:25:16 2006  Tim Janik  <timj@gtk.org>

	* data/bse.pc.in: added gobject to bse's link list.

Tue Nov 14 01:15:00 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsewavetool.cc: Added upsample2 and downsample2 commands.

Wed Nov  8 23:27:33 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/testresampler.cc: Support for testing linear interpolation.

Wed Nov  8 22:09:36 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/testresampler.cc: Ensure that accuracy tests use the same
	amount of samples regardless of the block size. Make testresampler